# tarot

./: .coverage  .gitignore  README.md  TODO.md  batch_generate_decks.py  divination.README.md  personality_test_with_tarot.html  tarot.json  tarot.txt  tarot_overview.README.md  tarot_quiz.css  tarot_quiz.html  tarot_quiz.js
backend/: .env.example  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.sh
backend/src/: app.py  routes.py
backend/src/services/: email_service.py
backend/src/tarot/: __init__.py  app.py  card_generator.py  data_manager.py  deck_manager.py  nft_generator.py  template_manager.py  user_manager.py
backend/src/tarot/static/: index.html
backend/src/templates/: reading_email.html
backend/src/utils/: error_handler.py
backend/tests/: conftest.py  test_card_generation.py  test_card_generator.py  test_deck_manager.py  test_email_service.py  test_mbti_cards.py  test_specific_cards.py  test_user_cards.py
contracts/: TarotNFT.sol
data/: keys.json  mbti_personalities.json  mbti_tarot.json  minor_arcana.json  personality_construct.json  questions.json  suites.json
frontend/: README.md  jest.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: app.ts  main.ts  results.ts
frontend/src/components/: header.js  loading-spinner.ts  toast.ts
frontend/src/pages/: index.html  personality_test.html  results.html
frontend/src/styles/: styles.css
js/: app.js  web3-client.js
tests/: jest.setup.js  test_app.py  test_tarot_quiz.js  test_web3_client.js
(+2 files in other folders)
